@@ -93,3 +93,13 @@ module M : sig type 'a t = private T of 'a end =
 
 module M1 : sig type 'a t = 'a M.t = private T of 'a end =
   struct type 'a t = 'a M.t = private T of 'a end;;
+
+(* PR#6090 *)
+module Test = struct type t = private A end
+module Test2 : module type of Test with type t = Test.t = Test;;
+let f (x : Test.t) = (x : Test2.t);;
+let f Test2.A = ();;
+let a = Test2.A;; (* fail *)
+(* The following should fail: cannot both have private abbreviation
+   and private definition *)
+module Test2 : module type of Test with type t = private Test.t = Test;;
